--- a/html/t23_text.html
+++ b/html/t23_text.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="icon" type="image/x-icon" href="../assets/images/dtec_favicon.PNG">
     <title>T23</title>
       <!-- stylesheets *******************************************-->
   <link rel="stylesheet" href="../css/style.css">
