--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <button onclick="location.href='html/t20_load_images.html'">t20: load images</button>
             <button onclick="location.href='html/t21_head2Mouse.html'">t21: head towards mouse</button>
             <button onclick="location.href='html/t22_keyboard.html'">t22: keyboard input</button>
+            <button onclick="location.href='html/t23_text.html'">t23: text</button>
             <button onclick="location.href='html/t50_extension.html'">t50_extension</button>
         </div>
     </div>
